test/assignExp7.slq

def main(){
	x:=vector(2,vector(2,0:uint[4]));
	x[0][1][0]:=H(x[0][1][0]);
	x[0][1]=3; // error
	return x;
}
